upgraded libraries, refactor

--- a/poetry_generator/templates/poetry_generator/inspiration.html
+++ b/poetry_generator/templates/poetry_generator/inspiration.html
@@ -1,5 +1,8 @@
- <h1>Input inspiration</h1>
+ <h1>PoEmo</h1>
+    <h2>Poetry generator with Emotional personality</h2>
+
+
     <form method="POST" class="inspiration-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Make poem</button>
+        <button type="submit" class="save btn btn-default">Make a poem</button>
     </form>
